package app.domain.model;

import app.domain.model.systemUser.SNSUser;

public class AdverseReactions {


    public String getSNSUserNumber(){
     //   SNSUser user = this.oApp.getCompany().getSNSUserStore().getSNSUserByEmail(session.getUserId().getEmail());
    return null;
    }
}
