@startuml
left to right direction
hide methods
skinparam classFontSize 20
skinparam padding 4
skinparam ranksep 150

class HealthcareCenter{
}

class Report

class Coordinator{
name
companyID
}

class Company{
designation
}

class Administrator

class Vaccine

class VaccineSchedule{
date
time
userNumber
vaccinationCenter
}

class Receptionist

class SNSUser{
name
birthDate
}

class Notification

class SMSNotification

class EmailNotification

class Report

class Dose{
age
dosage
timeInterval
}

class VaccineAdministration{
designation
ageGroup
}

class Nurse

class AdverseReaction

class RecoveryRoom{
listUsers
}


class CommunityCenter{
}

class VaccinationCenter{
name
phoneNumber
faxNumber
homeAddress
emailAddress
websiteAddress
openingHours
closingHours
slotDuration
maxNumVaccinesPerSlot
}

class VaccineType{
code
designation
whoID
}

class VaccinationCertificate

class ScheduleVerification

class WaitingRoom

class Employee{
name
companyID
}

Employee <|-down- Nurse
Employee <|-down- Receptionist

Company "1" -up-- "*" VaccinationCenter : manages >

VaccinationCenter <|-left- HealthcareCenter
VaccinationCenter <|-left- CommunityCenter
VaccinationCenter "1" -down-- "*"Vaccine : applies >
VaccinationCenter "1" -up-- "*" Report : reports >

Vaccine "*" -down--- "1" VaccineType : is >
Vaccine "1" -down-- "*" VaccineAdministration : of <
VaccineAdministration "0..1" -right- "0..1" VaccineSchedule : > fulfilling
VaccineAdministration "*" -down-- "1" SNSUser : > administrated on
VaccineAdministration "1" -down--- "*" Dose : has >
VaccineAdministration "1" -left- "*" Nurse : executed by >


HealthcareCenter "*" -down- "*" VaccineType : can administer >
CommunityCenter "*" -right- "1" VaccineType : can administer >


Coordinator "1" -left- "1" VaccinationCenter : coordinates >
Coordinator "*" --- "*" Report : analyses >

Administrator "1" -left- "*" Employee : registers and configures >

SNSUser "1" -right-- "1" VaccinationCertificate : requests >

VaccineSchedule "*" -down-- "1" SNSUser : made for >

Receptionist "*" -up-- "*" SNSUser : registers arrival of >
Receptionist "*" -down--- "*" VaccineSchedule : confirms >
Receptionist "1..*"-right-- "1..*"WaitingRoom : sends SNS user to >

Nurse "*" -down--- "1..*" WaitingRoom : sends SNS user to >
(Nurse, WaitingRoom) .. UserHealthHistoric
Nurse "1" -up-- "*" VaccinationCertificate : issues and delivers >
Nurse "*" -down-- "1" RecoveryRoom : sends user to >
(Nurse, RecoveryRoom) .. AdverseReaction

ScheduleVerification "1" -up- "1" VaccineSchedule : confirms >
ScheduleVerification "1" -up-- "0..1" Notification : emits >

Notification <|-- SMSNotification
Notification <|-- EmailNotification
@enduml